# Iris1

./: .gitignore  CHANGELOG.md  Iris1.elf  Makefile  README.md  readme.md  startup_app.c
bootloader/: boot_main.c  startup.c
include/: app.h  boot.h  eeprom_m95080.h  hal.h  learning_prefs.h  learning_store.h  led_driver.h  led_map.h  midi_preset_controller.h  midi_recall_timing.h  pins.h  preset.h  preset_store.h  reset_policy.h  sequencer.h  stm32f0_regs.h  switch_map.h
linker/: bootloader.ld  iris_app.ld  iris_app_noboot.ld
src/: app.cpp  eeprom_m95080.cpp  hal.cpp  isr.cpp  learning_store.cpp  led_driver.cpp  main.cpp  midi_preset_controller.cpp  midi_recall_timing.cpp  preset_store.cpp  reset_policy.cpp  sequencer.cpp
tests/: CMakeLists.txt  midi_preset_controller_test.cpp  midi_recall_timing_test.cpp  preset_learning_test.cpp  reset_policy_test.cpp  sequencer_test.cpp
tools/: combine_images.py
